<resources>
    <string name="app_name">Speed Test</string>

    <!--splash-->
    <string name="product_introduce">Test your network easily.</string>

    <!--main_activity-->
    <string name="exit_tip">Press again to quit</string>
    <string name="History">History</string>
    <string name="setting">Setting</string>

    <!--fragment speed test-->
    <string name="start_test">Start Test</string>
    <string name="ping">Ping</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>

    <!--fragment history-->
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="up_speed">Upload\nMbps</string>
    <string name="down_speed">Download\nMbps</string>
    <string name="ping_unit">Ping\nms</string>

    <!--fragment setting-->
    <string name="rate_us">Rate Us 5 Stars</string>
    <string name="unit">Unit</string>
    <string name="share_us">Share Us</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Privacy Policy</string>


</resources>
