<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_type"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_date"
        style="@style/TabTittle"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tv_up"
        style="@style/TabTittle"
        android:text="@string/up_speed" />

    <TextView
        android:id="@+id/tv_down"
        style="@style/TabTittle"
        android:text="@string/down_speed" />

    <TextView
        android:id="@+id/tv_ping"
        style="@style/TabTittle"
        android:layout_weight="2"
        android:text="@string/ping_unit" />
</LinearLayout>