<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="18dp"
            android:textStyle="bold"
            android:text="@string/History"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tab_type"
                        style="@style/TabTittle"
                        android:layout_weight="2"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/tab_date"
                        style="@style/TabTittle"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/tab_up"
                        style="@style/TabTittle"
                        android:text="@string/up_speed" />

                    <TextView
                        android:id="@+id/tab_down"
                        style="@style/TabTittle"
                        android:text="@string/down_speed" />

                    <TextView
                        android:id="@+id/tab_ping"
                        style="@style/TabTittle"
                        android:layout_weight="2"
                        android:text="@string/ping_unit" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lv_history"
                    android:layout_width="match_parent"
                    android:layout_height="320dp" />

                <FrameLayout
                    android:id="@+id/ad_container_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>