<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bj.glz.firsttry.activity.MainActivity">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/radio_group" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_speedtest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_radiobutton"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/btn_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_radiobutton"
                android:button="@null"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/History"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/btn_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_radiobutton"
                android:button="@null"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RadioGroup>
    </RelativeLayout>
</layout>
