<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_item_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/setting_item_bg"
                    android:gravity="center_vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_setting_unit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_setting_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_setting_unit"
                        android:layout_toRightOf="@id/iv_setting_unit"
                        android:text="@string/unit"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_item_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/ripple_setting_item"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_setting_rate"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_setting_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_setting_rate"
                        android:layout_toRightOf="@id/iv_setting_rate"
                        android:text="@string/rate_us"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/black_54" />

                <RelativeLayout
                    android:id="@+id/rl_item_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_setting_item"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_setting_share"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_setting_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_setting_share"
                        android:layout_toRightOf="@id/iv_setting_share"
                        android:text="@string/share_us"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/black_54" />

                <RelativeLayout
                    android:id="@+id/rl_item_aboutus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_setting_item"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_setting_about"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_setting_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_setting_about"
                        android:layout_toRightOf="@id/iv_setting_about"
                        android:text="@string/about_us"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/black_54" />

                <RelativeLayout
                    android:id="@+id/rl_item_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_setting_item"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_setting_feedback"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_setting_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_setting_feedback"
                        android:layout_toRightOf="@id/iv_setting_feedback"
                        android:text="@string/feedback"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/black_54" />

                <RelativeLayout
                    android:id="@+id/rl_item_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_setting_item"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_setting_policy"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_setting_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_setting_policy"
                        android:layout_toRightOf="@id/iv_setting_policy"
                        android:text="@string/policy"
                        android:textColor="@color/black_87"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>