<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/dial_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"></FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1000"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_ping"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="19sp" />

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="1px"
                            android:layout_margin="4dp"
                            android:background="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ping"
                            android:textColor="@color/white"
                            android:textSize="19sp" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="1px"
                        android:layout_height="60dp"
                        android:background="@color/white"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1000"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_download"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="19sp" />

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="1px"
                            android:layout_margin="4dp"
                            android:background="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ping"
                            android:textColor="@color/white"
                            android:textSize="19sp" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="1px"
                        android:layout_height="60dp"
                        android:background="@color/white"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1000"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_upload"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="19sp" />

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="1px"
                            android:layout_margin="4dp"
                            android:background="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ping"
                            android:textColor="@color/white"
                            android:textSize="19sp" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:layout_width="220dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_btn_start"
                    android:text="@string/start_test"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>

    </ScrollView>
</layout>